// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SummaryItem Should render SummaryItem with string value 1`] = `
<div
  class="Summary-Item"
>
  <div
    class="Summary-ItemLabel"
  >
    Фильтр:
  </div>
  <div
    class="Summary-ItemValues"
  >
    <span
      class="Summary-ItemValue"
    >
      Значение фильтра
    </span>
  </div>
</div>
`;

exports[`SummaryItem Should render SummaryItem without clear button 1`] = `
<div
  class="Summary-Item"
>
  <div
    class="Summary-ItemLabel"
  >
    Фильтр:
  </div>
  <div
    class="Summary-ItemValues"
  >
    <span
      class="Summary-ItemValue"
    >
      Значение фильтра,
    </span>
    <span
      class="Summary-ItemValue"
    >
      5
    </span>
  </div>
</div>
`;
